# wayland-scribe

./: README.md  main.cpp  meson.build  wayland-scribe.cpp  wayland-scribe.hpp
example/: README.md  hello-world.xml
example/client/: meson.build  my-hello-world.cpp
example/server/: hello-world-server.cpp  hello-world-server.hpp  meson.build
scribe/: argparser.hpp  cxxopts.hpp  main.cpp  wayland-scribe-old.cpp  wayland-scribe.cpp  wayland-scribe.hpp
